# usd-build-club

./: .gitignore  LICENSE.txt  PKG-INFO  Readme.md  _bootstrap.sh  bootstrap.sh  build-OpenImageIO.cmd  build-macos-blender.sh  build-macos-brew.sh  build-macos-maya.sh  build-macos.sh  build-prerequisites-linux.sh  build-prerequisites-macos.sh  build-prerequisites-vs2015.cmd  build-prerequisites-vs2017.cmd  build-prerequisites-windows.cmd  build-windows.cmd  build_prerequisites-macos-maya.sh  build_prerequisites.cmd  build_prerequisites.sh  configure-linux.sh  configure-macos.sh  configure-vs2017.cmd  configure-windows.cmd  configure.cmd  configure.sh  create_framework.py  setvars-macos-brew.sh  setvars-macos.sh  setvars.cmd
brew/: brew-install.sh  opensubdiv.rb
maya/: FindMaya.patch  maya-rpath.py
prerequisites-linux/: OpenEXR.sh  configure.qt4  double-conversion.sh  jinja2.sh  numpy.sh  ptex.sh  qt4.sh  tiff.sh
prerequisites-macOS/: FindPTex.cmake  OpenColorIO.sh  OpenEXR.sh  OpenImageIO.sh  OpenSubdiv.sh  PyOpenGL.sh  alembic.sh  bison.sh  boost.sh  boost_blender.sh  boost_maya_2017.sh  configure.qt4  cython.sh  double-conversion.sh  flex.sh  glew.sh  glfw.sh  hdf5.sh  init-local.sh  jinja2.sh  jpeg.sh  numpy.sh  png.sh  ptex.sh  pyside.cmake  pyside.sh  qt4.sh  qt_4_8_7.sh  tbb.sh  tiff.sh
prerequisites-vc140-x64/: OpenImageIO.cmd  OpenSubdiv.cmd  OpenSubdiv_debug.cmd  PySide-1.cmd  alembic.cmd  boost.cmd  double-conversion.cmd  glew.cmd  glext.cmd  glfw.cmd  hdf5.cmd  jpeg.cmd  openexr.cmd  png.cmd  ptex.cmd  (+7 more)
utils/embedded-python/: CMakeLists.txt  main.cpp
(+38 files in other folders)
